Fix field label text wrapping

--- a/axelor-front/src/views/form/builder/form-field.module.css
+++ b/axelor-front/src/views/form/builder/form-field.module.css
@@ -3,3 +3,9 @@
   flex-direction: column;
   gap: 0.5rem;
 }
+
+.fieldContainer label[for] {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
